websitev2/versioned_docs/version-12.0/titan-basics/workspace-windows.md
---
id: workspace-windows
title: Workspace Windows
sidebar_label: Workspace Windows
original_id: workspace-windows
---

import Keys from '@site/src/components/key.ts';

The main area of the screen contains the workspace windows. These
contain buttons for selecting fixtures, groups, palettes, playbacks and
so on. Information windows such as Playback View and the integrated
Visualiser application can also appear as a workspace window.

![Workspaces](/docs/images/Titan-Touch-Screen-User-Interface.png)

Sapphire Touch displays are slightly different:

Sapphire Touch Left touch screen


![Sapphire Left](/docs/images/Sapphire-Left.png)

Sapphire Touch Right touch screen


![Sapphire Right](/docs/images/Sapphire-Right.png)

Opening and positioning workspace windows
-----------------------------------------

You select which workspace windows you want to see using the <Keys.SoftKey>Open
Workspace Window</Keys.SoftKey> menu command on the root menu. You can also press the
<Keys.HardKey>View</Keys.HardKey> button (labelled <Keys.HardKey>Open</Keys.HardKey> or <Keys.HardKey>Open Window</Keys.HardKey> on some consoles)
to access the <Keys.SoftKey>Open Workspace Window</Keys.SoftKey> option while in another menu and
there are shortcuts to open some windows as listed in the next section.
In the rest of this manual we'll refer to this button as <Keys.HardKey>View/Open</Keys.HardKey>
to cover both options.

You can change the positions and sizes of the windows by using the
Window Control buttons near the numeric keypad or the Window Options
button (cog icon) at the top of each screen, more details are given in
the next section. The min/max button swaps the active window between
full screen and quarter size. The size/position button moves the active
window around the possible positions. You make a window active by
clicking/touching its header bar.

You can move the active window to a different monitor by pressing
<Keys.HardKey>Avo</Keys.HardKey> and the Size/Position button, or <Keys.HardKey>View/Open</Keys.HardKey> then <Keys.SoftKey>Window
Options</Keys.SoftKey> then <Keys.SoftKey>Move Screen</Keys.SoftKey>.

### Shortcuts to open workspace windows

Press <Keys.HardKey>View/Open</Keys.HardKey> then an Attribute Bank button to open the Palette
window for that attribute.

Press <Keys.HardKey>View/Open</Keys.HardKey> then <Keys.HardKey>Patch</Keys.HardKey> to open the Patch View window.

Press <Keys.HardKey>View/Open</Keys.HardKey> then a fixture select button to open the Fixture
View window showing patch details for that fixture.

Press <Keys.HardKey>View/Open</Keys.HardKey> then <Keys.HardKey>Connect</Keys.HardKey> to open the View Cue window.

Press <Keys.HardKey>View/Open</Keys.HardKey> then <Keys.HardKey>Off</Keys.HardKey> to open the Active Playbacks window.

Press <Keys.HardKey>View/Open</Keys.HardKey> then <Keys.HardKey>Macro</Keys.HardKey> to open the Macro window.

### Window setup buttons

At the top right of each workspace window are three or four buttons
which access other functions for the window.

![Capture Settings Window](/docs/images/Camera-movements-in-Capture-Visualiser-Workspace-Window.png)

The <strong>Context Menu</strong> button is only shown on Sapphire Touch and Titan
Go, and gives a drop down menu at the top of the window showing the
context menu buttons which relate to the current window.

![Patch View](/docs/images/Patch-View-2.png)

On all other consoles the context menu buttons are automatically shown
below the prompt area on the top right of the main screen. These buttons
change to match the active window. The picture below gives an example of
how the context buttons appear when Patch View window is active.

![Context Menu](/docs/images/Context-Menu.png)

The <strong>Window Appearance Options</strong> button (cog icon) lets you select the
standard window sizes and positions. Buttons are also shown allowing you
to set the button size and the text size of the window, and move the
window to an external monitor. The Appearance options may vary depending
on which window it is, the setup of the console and if you have any
external monitors.

![Window Appearance Menu](/docs/images/Window-Appearance-Options.png)

The <strong>Resize Window</strong> button allows you to set adjustable window sizes.
A grid screen will open.

![Resize](/docs/images/Resize.png)

With the softkey <Keys.SoftKey>Edit All Windows</Keys.SoftKey> set to Off, you just set the size
of the selected window.

Touch and drag the top left or bottom right corners to resize the
window. Touch and drag anywhere else to move the window.

Tap on a corner to set a start corner position - the window will
highlight in red and ask you to tap to set the opposite corner position.

If the softkey <Keys.SoftKey>Resize Neighbours</Keys.SoftKey> is set to On, surrounding windows
will resize to make room for the window you are editing. If Off, the
other windows will stay the same size and go behind the current window.

If <Keys.SoftKey>Edit All Windows</Keys.SoftKey> is set to On, corner arrows will appear in all
windows and you can adjust the size of all the windows together. Press
<Keys.HardKey>Enter</Keys.HardKey>, <Keys.HardKey>Exit</Keys.HardKey> or <Keys.SoftKey>OK</Keys.SoftKey> to finish.

![Resize](/docs/images/Resize-2.png)

> If you accidentally set a window to a single grid size, you can't then get to the Window Layout button to resize it. Select the window and use the <Keys.SoftKey>Min/Max</Keys.SoftKey> softkey to set the window to a fixed size.

You can move the active window between screens from the Window
Appearance screen, or by pressing View then <Keys.SoftKey>Window Options</Keys.SoftKey> then
<Keys.SoftKey>Move Screen</Keys.SoftKey>, or hold <Keys.HardKey>Avo</Keys.HardKey> and the <Keys.HardKey>Size & Position</Keys.HardKey> button.

You can close the active window using the <Keys.HardKey>Close</Keys.HardKey> button (not on all
consoles). You can close all windows by pressing <Keys.HardKey>Avo</Keys.HardKey>+<Keys.HardKey>Close</Keys.HardKey>, or
use the <Keys.SoftKey>Close All</Keys.SoftKey> softkey.

### Controlling button layout / grid

Buttons normally resize automatically to suit the screen size and
resolution, however this means that moving shows between different
consoles or different screens can make the number of rows and columns
change, causing buttons to move around. If you have set a particular
layout you want to keep (for example if you've positioned fixtures in
the window to match the layout on stage), open the Window Appearance
menu using the Cog button and set Button Size to <Keys.SoftKey>Button Size Set Rows
& Columns</Keys.SoftKey>. You can then set a fixed layout using the <Keys.SoftKey>Rows</Keys.SoftKey> and
<Keys.SoftKey>Columns</Keys.SoftKey> buttons.

![Rows and Columns](/docs/images/Rows-and-Columns.png)

The Rows and Columns settings are remembered even if you change the
button size back to one of the automatic sizes, which allows you to swap
between auto and fixed button size modes.

Mini Screen (Arena only)
------------------------

The <Keys.HardKey>Display</Keys.HardKey> button below the rotary encoders toggles through four
fixed layouts for the Mini screen:

- Workspace window(s) with encoder legends on the right
![Arena Miniscreen](/docs/images/Arena-Miniscreen.png)

- Workspace window(s) with macro button legends below
![Mini Screen Macros](/docs/images/Mini-Screen-Macros.png)


- Fixed playbacks window - in this mode the first two rows of touch
buttons are the same as the macro buttons below. This window cannot be
moved to another screen, and other windows open on the Mini screen will
move to the main screen when this layout is set.

- Workspace window(s) fill the full screen, no button/encoder legends
shown.

Saving workspace layout
-----------------------

You can save workspaces, allowing you to reconfigure all the screen
displays at the touch of a button.

Workspace layouts are saved to the Workspaces touch buttons to the left
of the A-G menu buttons (except on Sapphire Touch and Titan Go where
they are down the left side of the screen). Press <Keys.HardKey>View/Open</Keys.HardKey> then
<Keys.SoftKey>Record Workspace</Keys.SoftKey>, then touch one of the Workspaces buttons, or just
touch an empty button twice to Quick Record. You can also save
workspaces onto any grey handle or macro button.

![Workspaces](/docs/images/Recoding-a-Workspace-Layout.png)

Workspaces are saved with the show.

As an example of setting up a workspace, suppose while programming you
wanted to be able to access fixtures, position palettes, fixture
attributes and shapes:

1. Press <Keys.HardKey>Exit</Keys.HardKey> to get to the root menu then the <Keys.SoftKey>Open Workspace
Window</Keys.SoftKey> menu softkey.

2. Find the <Keys.SoftKey>Fixtures</Keys.SoftKey> window in the list and press it.

3. If the window is not in the top left quarter, press the Size &
Position button (above the numeric keys) until the window occupies the
top left quarter.

4. Press <Keys.SoftKey>Open Workspace Window</Keys.SoftKey> again and select the <Keys.SoftKey>Positions</Keys.SoftKey>
window. Press the Size & Position button to position it in the desired
location.

5. Repeat to activate the <Keys.SoftKey>Attribute Control</Keys.SoftKey> and <Keys.SoftKey>Shapes</Keys.SoftKey> windows.

6. Press <Keys.HardKey>View/Open</Keys.HardKey> then <Keys.SoftKey>Record Workspace</Keys.SoftKey>, or hold <Keys.HardKey>Avo</Keys.HardKey> and
press <Keys.HardKey>View/Open</Keys.HardKey>. Type in a name for the workspace. Then touch the
Workspace button where you want to store this workspace layout. Or, you
can use Quick Record -- just touch an empty workspace button and it will
turn red with a +. Type a name for the workspace and touch again to
store it.

-   <Keys.SoftKey>Record Visible/All Windows</Keys.SoftKey> lets you set whether the workspace
    will contain only the windows which are currently visible, or will
    also include any windows which are hidden underneath other windows.

-   <Keys.SoftKey>Remove/Leave other windows on recall</Keys.SoftKey> sets whether all other
    windows will be closed when this workspace is recalled.

-   To delete a workspace button, press <Keys.HardKey>View/Open</Keys.HardKey>, <Keys.HardKey>Delete</Keys.HardKey>, then
    the workspace button to be deleted.

Compatibility windows for Pearl Expert shows
--------------------------------------------

The "Fixtures and Playbacks" and "Groups and Palettes" windows allow you
to access the preset fader handles in shows which have been programmed
on the Pearl Expert.

When either of these windows is opened, there is a context button option
to <Keys.SoftKey>Move to workspace</Keys.SoftKey>. This will move the handles from the
compatibility window to the appropriate workspace window. You need to do
this twice, once with the "Fixtures and playbacks" window selected, and
once with the "Palettes and groups" window selected.

Quick record
------------

![Quick Record](/docs/images/Recoding-a-Workspace-Layout.png)Some windows - Groups, Workspaces,
Playbacks, and all the Palette windows - have a Quick Record function.
Set up what you want to record, then touch or click an empty button
once. The button will light up red with a + sign. At this point you can
enter a legend. Touch or click again to store the item.

The Quick Record function can be disabled using [Key Profiles](../system-settings/key-profiles.md)

Legends and picture legends
---------------------------

All touch buttons can have legends set to remind you what they do. In
addition, you can draw picture legends on the buttons. To do this,
select <Keys.SoftKey>Set Legend</Keys.SoftKey> then press <Keys.SoftKey>Picture</Keys.SoftKey>. A drawing space will open
on the touch screen for you to draw the legend. There is also a library
of pictures to choose from including popular gobo designs.

Colour palettes will automatically create a picture legend showing the
colour(s) in the palette when you save it. Gobo palettes will show an
image of the standard gobo, if the fixture personality has this
information in it.

![Gobos and Beams Workspace Window](/docs/images/Gobos-and-Beams-Workspace-Window.png)

Button Halo
-----------

You can set a custom coloured halo for fixture, group or palette
buttons. This can be really useful for identifying different types of
button at a glance. Select the <Keys.SoftKey>Halo</Keys.SoftKey> option on the Set Legends menu.

![Halo](/docs/images/Fixture-Halo.png)

If you set a [halo on fixture buttons](../patching/changing-the-patch.md#fixture-button-halo), the halo colour is also used in other windows; fixture buttons can also have an automatic halo to help
identify different types of fixture.

<strong>Trackball (Sapphire Touch only)</strong>
-----------------------------------

The trackball on the right of the console can be used either to control
the mouse pointer on the touch screens and external monitors, or to
control fixtures.

To use in mouse mode, hold the <Keys.HardKey>Assign</Keys.HardKey> button below the trackball and
click the \'Left\' mouse button. The trackball will then control the
mouse pointer and the ring will scroll windows up and down.

To use in console mode for controlling fixtures, press the <Keys.HardKey>Assign</Keys.HardKey>
button on its own. The trackball will control pan and tilt of selected
fixtures, and the ring controls fine tilt.

<strong>Touch Keyboard</strong>
------------------

At the end of the toolbar is the keyboard popup button which will open
the touch keyboard.

![Keyboard Button](/docs/images/Keyboard-Button.png)

The touch keyboard can be switched between large and small size using
the Max/Min button and you close it using the large X button in the top
right hand corner. You can also move it on the screen by touching and
dragging the blank area of the keyboard at the top.

If you want the keyboard to pop up automatically when text input is
required, set the Man/Auto button to "Auto". This setting will stay
active until you change it back to "Manual".

The small version of the keyboard (pictured) does not have some of the
less frequently used buttons.

![Keyboard](/docs/images/Keyboard.png)
